| Summary: | ASTERISK-26233: pbx: Failure to remove inconsistent extension names | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2016-07-24 20:41:53 | Date Closed: | 2016-08-01 08:38:17 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/PBX |
| Versions: | SVN 11.23.0 13.10.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) full.txt | |
| Description: | The following dialplan can expose this bug:
{code} [default] exten => 1000,1,Noop(1000,1) exten => 1-000,2,Noop(1-000,2) {code} It appears the code treats 1000 and 1-000 as the same when adding, but not when removing. This causes the extension to remain. If you just shutdown you will see: {noformat}[Jul 24 21:35:09] WARNING[6086]: pbx.c:7354 ast_context_remove_extension_callerid2: Cannot find extension 1-000 in root_table in context default{noformat} If you unload pbx_config you will crash as soon as something tries reading the registrar of {{1-000,2,default}}. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-07-24 20:41:54.345-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Corey Farrell (coreyfarrell) 2016-07-24 21:09:11.558-0500 full.txt log from Asterisk 11 using minimum extensions.conf and only loading pbx_config.so. | ||